--- a/exercise02/config.ini
+++ b/exercise02/config.ini
@@ -1,8 +1,17 @@
 [DEFAULT]
 METRIC = COSINE
+MINIMUM_AVG_SCORE = 4
 
 [COSINE]
 SCORE_THRESHOLD = 0.97
+COOCCURENCE_THRESHOLD = 50
+
+[PEARSON]
+SCORE_THRESHOLD = 0.3
+COOCCURENCE_THRESHOLD = 50
+
+[JACCARD]
+SCORE_THRESHOLD = 0.4
 COOCCURENCE_THRESHOLD = 50
 
 [EUCLIDEAN]
